Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -213,6 +213,19 @@ define table /dmo/connection {        " 실제 DB 테이블 생성
 #### 5) Data Element 타입 및 필드 라벨 설정
 
 <img width="814" height="358" alt="image" src="https://github.com/user-attachments/assets/7e1e0dd6-b930-4b14-bbe2-fb87bca8e4f1" />
+</br>
+</br>
+
+#### 6) Data Element 속성(Properties) 확인
+
+<img width="922" height="195" alt="image" src="https://github.com/user-attachments/assets/9f1bb11d-d71a-4f9d-847b-c3be9b5391c8" />
+
+
+#### 7)
+- 문법 검사(Syntax Check) – 코드 오류 여부 확인
+- 실행(Run) – SAP GUI의 F8과 동일한 실행 기능 (`Ctrl + shift + A`)
+- 활성화(Activate) – 수정한 객체를 Active 상태로 반영
+<img width="513" height="68" alt="image" src="https://github.com/user-attachments/assets/4130ad23-fee6-4e92-8fb6-9fc710f0cf40" />
 
 </br>
 </br>
