Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -221,7 +221,7 @@ define table /dmo/connection {        " 실제 DB 테이블 생성
 <img width="922" height="195" alt="image" src="https://github.com/user-attachments/assets/9f1bb11d-d71a-4f9d-847b-c3be9b5391c8" />
 
 
-#### 7)
+#### 7) ABAP 개발 툴바 아이콘 기
 - 문법 검사(Syntax Check) – 코드 오류 여부 확인
 - 실행(Run) – SAP GUI의 F8과 동일한 실행 기능 (`Ctrl + shift + A`)
 - 활성화(Activate) – 수정한 객체를 Active 상태로 반영
@@ -251,3 +251,19 @@ define table /dmo/connection {        " 실제 DB 테이블 생성
 <img width="790" height="204" alt="image" src="https://github.com/user-attachments/assets/649d407d-9f5f-4942-a753-364f154ea43a" />
 
 <img width="785" height="383" alt="image" src="https://github.com/user-attachments/assets/15e5d686-ad80-4140-b075-e7a2c6a5643f" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 실습 2
+- domain, element 생성 실습
+  
+<img width="614" height="283" alt="image" src="https://github.com/user-attachments/assets/f00295a0-c18f-4e16-bfc6-385ec41d765b" />
+
+<img width="614" height="317" alt="image" src="https://github.com/user-attachments/assets/19b91819-8dfa-4529-be71-c941354ac4ad" />
+
+<img width="603" height="366" alt="image" src="https://github.com/user-attachments/assets/d144b4c0-01cb-4eab-8c43-f18f75da9ae4" />
+
+<img width="649" height="343" alt="image" src="https://github.com/user-attachments/assets/cd0c8d1d-50dc-454a-8ddb-598cb5564625" />
