Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -80,21 +80,28 @@
 ## < Eclipse를 활용한 ABAP Cloud 개발 환경 구성 >
 </br>
 
-- Eclipse(ADT)에서 DDL 문법을 사용해 ABAP Cloud용 데이터베이스 테이블 구조를 정의
-- 기본키(key)와 필드 타입(기본 타입 또는 Data Element)을 명시하여 테이블 구조를 설계
+- `@` 로 시작하는 Annotation으로 테이블 속성을 지정하고, `define table` 안에서 기본키와 필드 타입을 설계함.
+- `Quick Fix` : 정의되지 않은 타입으로 오류가 발생했을 때 `Ctrl + 1` 또는 전구 아이콘을 통해 Data Element를 자동 생성 가능
+- Primary Key는 key 키워드로 지정하며, 최소 1개 이상 최대 16개까지 설정 가능. 모든 키 필드는 테이블 맨 앞에 연속으로 위치해야 함.
+- `NOT NULL` 은 해당 필드를 필수값으로 지정하는 옵션이며, 기본키에는 반드시 적용되고 일반 필드에는 선택적으로 설정 가능
 ```abap
-define table /dmo/connection {        " 실제 DB 테이블 생성
+@EndUserText.label : 'Connection'                 " @Annotation - 테이블 설명
+@AbapCatalog.tableCategory : #TRANSPARENT         " 투명 테이블 설정
+@AbapCatalog.deliveryClass : #A                   " 어플리케이션 데이터
+@AbapCatalog.dataMaintenance : #RESTRICTED        " 유지보수 제한
 
-  key client        : abap.clnt not null;          " 클라이언트 (기본 타입 사용, PK)
-  key carrier_id    : /dmo/carrier_id not null;    " 항공사 ID (Data Element 참조, PK)
-  key connection_id : /dmo/connection_id not null; " 연결 ID (Data Element 참조, PK)
+define table /dmo/connection {                    " 실제 DB 테이블 생성
 
-  airport_from_id   : /dmo/airport_from_id;        " 출발 공항 (Data Element 참조)
-  airport_to_id     : /dmo/airport_to_id;          " 도착 공항 (Data Element 참조)
-  departure_time    : /dmo/flight_departure_time;  " 출발 시간
-  arrival_time      : /dmo/flight_arrival_time;    " 도착 시간
-  distance          : /dmo/flight_distance;        " 비행 거리
-  distance_unit     : msehi;                       " 거리 단위 (표준 Data Element)
+  key client        : abap.clnt not null;         " 기본키 (표준 타입 사용)
+  key carrier_id    : /dmo/carrier_id not null;   " 기본키 (Data Element 참조)
+  key connection_id : /dmo/connection_id not null;" 기본키 (Data Element 참조)
+
+  airport_from_id   : /dmo/airport_from_id;       " 출발 공항
+  airport_to_id     : /dmo/airport_to_id;         " 도착 공항
+  departure_time    : /dmo/flight_departure_time; " 출발 시간
+  arrival_time      : /dmo/flight_arrival_time;   " 도착 시간
+  distance          : /dmo/flight_distance;       " 거리
+  distance_unit     : msehi;                      " 단위 (표준 Data Element)
 
 }
 ```
