Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -71,15 +71,11 @@
 
 </br>
 </br>
-</br>
-
----
-
-</br>
 
 ## < Eclipse를 활용한 ABAP Cloud 개발 환경 구성 >
 </br>
 
+### < ABAP Cloud 테이블 정의 문법 및 주요 개념 >
 - `@` 로 시작하는 Annotation으로 테이블 속성을 지정하고, `define table` 안에서 기본키와 필드 타입을 설계함.
 - `Quick Fix` : 정의되지 않은 타입으로 오류가 발생했을 때 `Ctrl + 1` 또는 전구 아이콘을 통해 Data Element를 자동 생성 가능
 - Primary Key는 key 키워드로 지정하며, 최소 1개 이상 최대 16개까지 설정 가능. 모든 키 필드는 테이블 맨 앞에 연속으로 위치해야 함.
@@ -112,7 +108,27 @@ define table /dmo/connection {                    " 실제 DB 테이블 생성
 </br>
 </br>
 </br>
+
+### < 통화/수량 관련 타입 & Annotation 정리 >
+- CURR/QUAN 필드에 통화·단위가 없으면 오류가 발생하며, Ctrl+1 Quick Fix로 자동 생성 및 Annotation 연결 가능
 </br>
+
+- **CURR / CUKY**
+
+  - 금액 필드(CURR)는 반드시 통화 코드 필드(CUKY)와 함께 사용
+  - CDS에서 `@Semantics.amount.currencyCode` 로 통화 필드를 연결
+- **QUAN / UNIT**
+
+  - 수량 필드(QUAN)는 반드시 단위 필드(UNIT)와 함께 사용
+  - CDS에서 `@Semantics.quantity.unitOfMeasure` 로 단위 필드를 연결
+  
+</br>
+</br>
+</br>
+</br>
+
+---
+
 </br>
 
 ## < Eclipse에서 ABAP 패키지 생성 절차 >
