Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -44,6 +44,9 @@
 
 </br>
 
+## < Eclipse(ADT) 기반 ABAP Cloud 데이터 구조 설계 >
+</br>
+
 ### < ABAP 사전(Dictionary) 미리 정의된 타입 >
 
 | 구분 | 용도 | 사전 타입 (Predefined Dictionary Type) | 대응 ABAP 기본 타입 |
@@ -72,8 +75,6 @@
 </br>
 </br>
 
-## < Eclipse를 활용한 ABAP Cloud 개발 환경 구성 >
-</br>
 
 ### < ABAP Cloud 테이블 정의 문법 및 주요 개념 >
 - `@` 로 시작하는 Annotation으로 테이블 속성을 지정하고, `define table` 안에서 기본키와 필드 타입을 설계함.
