Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -1,4 +1,4 @@
-## <  핵심 개념 >
+<img width="633" height="159" alt="image" src="https://github.com/user-attachments/assets/8e3811b5-0120-4aa4-a476-be8dffba3261" />## <  핵심 개념 >
 - **1) ABAP Dictionary 및 CDS 객체 구조**
 - **2) SAP UI5 테마 커스터마이징 (TCODE - FIORI LAUNCHPAD : `/n/ui2/flp`), TCODE - 테마 : `/n/ui5/theme_designer`)**
 - **3) Eclipse에서 ABAP 패키지 생성 절차**
@@ -173,6 +173,8 @@ define table /dmo/connection {                    " 실제 DB 테이블 생성
 </br>
 </br>
 </br>
+</br>
+</br>
 
 ## < Eclipse에서 Domain 생성 절차 >
 </br>
@@ -203,6 +205,8 @@ define table /dmo/connection {                    " 실제 DB 테이블 생성
 - `Sign` : 음수 값 입력이 가능하도록 허용
 
 <img width="605" height="283" alt="image" src="https://github.com/user-attachments/assets/5b303fec-8d02-4e1c-b302-d71eb75afe2a" />
+</br>
+</br>
 </br>
 </br>
 </br>
@@ -242,13 +246,76 @@ define table /dmo/connection {                    " 실제 DB 테이블 생성
 #### 6) Data Element 속성(Properties) 확인
 
 <img width="922" height="195" alt="image" src="https://github.com/user-attachments/assets/9f1bb11d-d71a-4f9d-847b-c3be9b5391c8" />
+</br>
+</br>
 
-
-#### 7) ABAP 개발 툴바 아이콘 기
+#### 7) ABAP 개발 툴바 아이콘 기능
 - 문법 검사(Syntax Check) – 코드 오류 여부 확인
 - 실행(Run) – SAP GUI의 F8과 동일한 실행 기능 (`Ctrl + shift + A`)
 - 활성화(Activate) – 수정한 객체를 Active 상태로 반영
 <img width="513" height="68" alt="image" src="https://github.com/user-attachments/assets/4130ad23-fee6-4e92-8fb6-9fc710f0cf40" />
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+#### 1) clipse(ADT)에서 새로운 ABAP Repository Object 생성
+
+<img width="633" height="159" alt="image" src="https://github.com/user-attachments/assets/bba4b9ec-e94d-4bdf-8fec-3ad075b384ff" />
+
+<img width="471" height="366" alt="image" src="https://github.com/user-attachments/assets/6261ac4a-f755-4288-9ec2-a0a1eaecd83c" />
+</br>
+</br>
+
+
+#### 2) ABAP Repository Object에서 Database Table 생성 선택
+
+<img width="471" height="366" alt="image" src="https://github.com/user-attachments/assets/54f88c10-da8d-455b-8b68-b8ac9c8cd42e" />
+</br>
+</br>
+
+#### 3) Eclipse(ADT)에서 신규 Database Table 생성 기본 정보 입력
+
+<img width="583" height="330" alt="image" src="https://github.com/user-attachments/assets/dd414fad-f671-45df-adf6-884395e8b803" />
+</br>
+</br>
+
+#### 4) ABAP DDL 문법으로 Eclipse(ADT)에서 DB 테이블을 정의
+```abap
+" ZTSCARR_C203
+
+@EndUserText.label : 'Scarr'                     " 테이블 설명(라벨)
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE " 확장 불가 설정
+@AbapCatalog.tableCategory : #TRANSPARENT        " 투명(Transparent) 테이블
+@AbapCatalog.deliveryClass : #A                  " 어플리케이션 데이터
+@AbapCatalog.dataMaintenance : #ALLOWED          " 데이터 유지보수 허용
+
+define table ztscarr_c203 {                      " DB 테이블 생성
+
+  key client : abap.clnt not null;               " 기본키 1 (클라이언트)
+  key carrid : s_carr_id not null;               " 기본키 2 (항공사 ID)
+
+  carrname   : s_carrname;                       " 일반 필드 (항공사 이름)
+
+}
+```
+</br>
+</br>
+
+#### 5) Eclipse(ADT)에서 테이블 Data Preview 실행
+- 마우스 우클릭
+  
+<img width="569" height="218" alt="image" src="https://github.com/user-attachments/assets/27577e56-619f-4b7b-99ea-e95a2ac3b0d9" />
+</br>
+</br>
+
+#### 6) Eclipse(ADT)에서 테이블 Technical Settings 접근
+- 마우스 우클릭 또는 F8
+  
+<img width="595" height="205" alt="image" src="https://github.com/user-attachments/assets/8621b7c5-c2e3-4450-a68e-acc45f5ead70" />
 
 </br>
 </br>
