Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -262,11 +262,13 @@ define table /dmo/connection {                    " 실제 DB 테이블 생성
 </br>
 </br>
 
+## < Eclipse에서 Database Table 생성 절차 >
+</br>
+
 #### 1) clipse(ADT)에서 새로운 ABAP Repository Object 생성
 
 <img width="633" height="159" alt="image" src="https://github.com/user-attachments/assets/bba4b9ec-e94d-4bdf-8fec-3ad075b384ff" />
 
-<img width="471" height="366" alt="image" src="https://github.com/user-attachments/assets/6261ac4a-f755-4288-9ec2-a0a1eaecd83c" />
 </br>
 </br>
 
