Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -297,13 +297,18 @@ define table /dmo/connection {                    " 실제 DB 테이블 생성
 
 define table ztscarr_c203 {                      " DB 테이블 생성
 
-  key client : abap.clnt not null;               " 기본키 1 (클라이언트)
-  key carrid : s_carr_id not null;               " 기본키 2 (항공사 ID)
-
-  carrname   : s_carrname;                       " 일반 필드 (항공사 이름)
+  key client : abap.clnt not null;               
+  key carrid : s_carr_id not null;              
+  carrname   : s_carrname;                       
+  include zc203_timestamp;
 
 }
 ```
+</br>
+
+- 테이블 위에 커서 올리고 `F2` 누르면 안의 필드들 확인 가능
+<img width="459" height="149" alt="image" src="https://github.com/user-attachments/assets/7db9570e-9e8c-464b-959e-c4744a3c1ba4" />
+
 </br>
 </br>
 
