Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -323,6 +323,23 @@ define table ztscarr_c203 {                      " DB 테이블 생성
 - 마우스 우클릭 또는 F8
   
 <img width="595" height="205" alt="image" src="https://github.com/user-attachments/assets/8621b7c5-c2e3-4450-a68e-acc45f5ead70" />
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+## < Eclipse에서 Database Table 생성 절차 >
+</br>
+
+#### 1) Eclipse(ADT)에서 신규 Structure 생성 기본 정보 입력
+
+<img width="566" height="334" alt="image" src="https://github.com/user-attachments/assets/244e4490-ce66-4cdc-a20b-8c40f67072a8" />
+</br>
+</br>
+
 
 </br>
 </br>
