Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -331,7 +331,7 @@ define table ztscarr_c203 {                      " DB 테이블 생성
 </br>
 </br>
 
-## < Eclipse에서 Database Table 생성 절차 >
+## < Eclipse에서 Structure 생성 절차 >
 </br>
 
 #### 1) Eclipse(ADT)에서 신규 Structure 생성 기본 정보 입력
@@ -340,7 +340,43 @@ define table ztscarr_c203 {                      " DB 테이블 생성
 </br>
 </br>
 
+### 2) zc203_timestamp 스트럭처 구성
+```abap
+" zc203_timestamp
 
+@EndUserText.label : 'TIMESTAMP'
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
+define structure zc203_timestamp {
+
+  created_by       : abp_creation_user;
+  created_at       : abp_creation_tstmpl;
+  local_changed_by : abp_locinst_lastchange_user;
+  local_changed_at : abp_locinst_lastchange_tstmpl;
+  last_changed_at  : abp_lastchange_tstmpl;
+
+}
+```
+</br>
+</br>
+
+### 3) zsinfoflight_c203 스트럭처 구성
+```abap
+" zsinfoflight_c203
+
+@EndUserText.label : 'flight info'
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
+define structure zsinfoflight_c203 {
+
+  fldate    : s_date;
+  @Semantics.amount.currencyCode : 'zsinfoflight_c203.currency'
+  price     : s_price;
+  currency  : s_currcode;
+  planetype : s_planetye;
+  seatsmax  : s_seatsmax;
+  seatsocc  : s_seatsocc;
+
+}
+```
 </br>
 </br>
 </br>
