Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -425,3 +425,34 @@ define structure zsinfoflight_c203 {
 <img width="621" height="328" alt="image" src="https://github.com/user-attachments/assets/376b8524-23bb-4cb0-b165-c41e47d99816" />
 </br>
 </br>
+</br>
+</br>
+</br>
+
+### 실습 3
+- 디비테이블 생성 실습 ( 테이블 안에 스트럭처 구조 넣기 )
+```abap
+" Z03EMPLOY
+
+@EndUserText.label : 'Z03EMPLOY'
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
+@AbapCatalog.tableCategory : #TRANSPARENT
+@AbapCatalog.deliveryClass : #A
+@AbapCatalog.dataMaintenance : #RESTRICTED
+define table z03employ {
+
+  key client      : abap.clnt not null;
+  key employee_id : z03_employee_id not null;
+  first_name      : /dmo/first_name;
+  last_name       : /dmo/last_name;
+  birth_date      : z03_birth_date;
+  entry_date      : z03_entry_date;
+  @Semantics.amount.currencyCode : 'z03employ.currency_code'
+  annual_salary   : z03_annual_salary;
+  currency_code   : waers;
+  include /lrn/s_admin;
+
+}
+```
+
+<img width="395" height="331" alt="image" src="https://github.com/user-attachments/assets/0b422c89-8b75-4b09-a40e-6d5cd2d4612e" />
