Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -300,7 +300,7 @@ define table ztscarr_c203 {                      " DB 테이블 생성
   key client : abap.clnt not null;               
   key carrid : s_carr_id not null;              
   carrname   : s_carrname;                       
-  include zc203_timestamp;
+  timestamp  : include zc203_timestamp;
 
 }
 ```
