Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -340,7 +340,7 @@ define table ztscarr_c203 {                      " DB 테이블 생성
 </br>
 </br>
 
-### 2) zc203_timestamp 스트럭처 구성
+#### 2) zc203_timestamp 스트럭처 구성
 ```abap
 " zc203_timestamp
 
@@ -359,7 +359,7 @@ define structure zc203_timestamp {
 </br>
 </br>
 
-### 3) zsinfoflight_c203 스트럭처 구성
+#### 3) zsinfoflight_c203 스트럭처 구성
 ```abap
 " zsinfoflight_c203
 
@@ -377,6 +377,37 @@ define structure zsinfoflight_c203 {
 
 }
 ```
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+## < Eclipse에서 Database Table 생성 절차 >
+</br>
+
+#### 1) Show In → Project Explorer를 통해 객체 위치 확인
+
+<img width="609" height="289" alt="image" src="https://github.com/user-attachments/assets/6e049df5-a959-43fa-87a9-aa04e06666ff" />
+
+</br>
+</br>
+
+#### 2) Duplicate 메뉴를 이용해 객체 복사
+
+<img width="441" height="551" alt="image" src="https://github.com/user-attachments/assets/e90df841-c86c-45d5-92cf-bd3193665d68" />
+</br>
+</br>
+
+#### 3) 패키지와 신규 클래스명을 지정하여 복사 클래스 생성
+
+<img width="592" height="330" alt="image" src="https://github.com/user-attachments/assets/ec28bec3-326c-43b9-99cc-b560c1b8dcd7" />
+
+</br>
+</br>
+
 </br>
 </br>
 </br>
@@ -454,5 +485,5 @@ define table z03employ {
 
 }
 ```
-
+- Size Category로 테이블의 예상 데이터 양(레코드 수)을 기준으로 저장 공간 크기를 지정
 <img width="395" height="331" alt="image" src="https://github.com/user-attachments/assets/0b422c89-8b75-4b09-a40e-6d5cd2d4612e" />
