Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -256,6 +256,19 @@ define table /dmo/connection {                    " 실제 DB 테이블 생성
 <img width="513" height="68" alt="image" src="https://github.com/user-attachments/assets/4130ad23-fee6-4e92-8fb6-9fc710f0cf40" />
 </br>
 </br>
+
+- Open With → SAP GUI를 통해 테이블을 SAP GUI 화면으로 열기 (`Ctrl + 6`)
+  
+<img width="698" height="237" alt="image" src="https://github.com/user-attachments/assets/0ec2bd6e-74fc-4d86-894a-90529ac7c8f6" />
+</br>
+</br>
+
+- SQL Console을 통해 해당 테이블에 직접 SQL문을 실행 가능
+
+<img width="606" height="221" alt="image" src="https://github.com/user-attachments/assets/f30961a2-a091-4f1c-98a8-38743091b9c6" />
+
+</br>
+</br>
 </br>
 </br>
 </br>
