Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -398,7 +398,7 @@ define structure zsinfoflight_c203 {
 </br>
 </br>
 
-## < Eclipse에서 Database Table 생성 절차 >
+## < Eclipse에서 ABAP 클래스 복사 절차 >
 </br>
 
 #### 1) Show In → Project Explorer를 통해 객체 위치 확인
@@ -417,9 +417,32 @@ define structure zsinfoflight_c203 {
 #### 3) 패키지와 신규 클래스명을 지정하여 복사 클래스 생성
 
 <img width="592" height="330" alt="image" src="https://github.com/user-attachments/assets/ec28bec3-326c-43b9-99cc-b560c1b8dcd7" />
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+## < 테이블 구조 변경 오류 >
 
 </br>
+
+#### 1) 필드 구조를 변경해서 DB 테이블을 다시 변환(Conversion)해야 하는 상태
+
+<img width="495" height="246" alt="image" src="https://github.com/user-attachments/assets/27057c4b-ab3f-4c20-a003-4da6b2e6b3af" />
 </br>
+</br>
+
+#### 2) Adjust and activate database table, convert data → 테이블 구조를 변경하고 기존 데이터는 유지한 채 DB 테이블을 변환·재활성화하는 옵션
+
+<img width="664" height="171" alt="image" src="https://github.com/user-attachments/assets/3beac783-4582-4b7b-80f5-3d5bd3f6cebf" />
+</br>
+</br>
+
+#### 3) Quick Fix 화면에서 해당 도메인을 사용 중인 테이블/객체들을 확인하고 함께 활성화할 수 있음
+<img width="752" height="478" alt="image" src="https://github.com/user-attachments/assets/1f80ea35-117b-4754-8c72-60e5a3501dc1" />
 
 </br>
 </br>
