Update 2-01. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/2-01. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/2-01. 프로그래밍 코드 최적화(02.19).md
@@ -86,6 +86,9 @@
 @AbapCatalog.tableCategory : #TRANSPARENT         " 투명 테이블 설정
 @AbapCatalog.deliveryClass : #A                   " 어플리케이션 데이터
 @AbapCatalog.dataMaintenance : #RESTRICTED        " 유지보수 제한
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE   " 확장 불가 설정
+@AbapCatalog.compiler.compareFilter : true            " 필터 비교 최적화
+@AccessControl.authorizationCheck : #NOT_REQUIRED     " CDS 권한 체크 미적용
 
 define table /dmo/connection {                    " 실제 DB 테이블 생성
 
