Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -1,1 +1,88 @@
 ### < 클래스/인터페이스 타입 vs 딕셔너리 타입 정리 >
+- 클래스/인터페이스 타입 : => 로 접근
+- 딕셔너리(Data Element) 타입 : 그냥 이름 그대로 사용
+</br>
+
+#### 1) Global Class에서 정의한 타입
+- 클래스 내부 TYPES는 사용할 때 `=>` 로 접근
+```abap
+CLASS cl_class DEFINITION.
+  PUBLIC SECTION.
+    TYPES the_type TYPE c LENGTH 10.
+ENDCLASS.
+
+DATA var1 TYPE cl_class=>the_type.
+```
+
+#### 2) Global Interface에서 정의한 타입
+- 인터페이스 내부 TYPES도 `=>` 로 접근
+```abap
+INTERFACE if_intf.
+  TYPES the_type TYPE c LENGTH 10.
+ENDINTERFACE.
+
+DATA var2 TYPE if_intf=>the_type.
+```
+
+#### 3) ABAP Dictionary (Data Element) 타입
+- 딕셔너리 타입은 `=>` 없이 바로 사용
+```abap
+DATA var3 TYPE zmy_de.
+```
+
+#### 4) Data Element (Reference to Class/Interface) 타입
+- 딕셔너리에서 참조타입으로 만들면 ABAP에서는 TYPE REF TO와 동일 의미
+```abap
+TYPES ref_type TYPE REF TO zcl_s4d400_class.
+```
+
+#### 5) Data Element (Predefined Type)
+- 딕셔너리에서 기본타입(DATS)으로 만들면 ABAP에서는 TYPE d와 동일 의미
+```abap
+TYPES predef_type TYPE d.
+```
+
+#### 6-1) ABAP Dictionary Structure 타입
+- 딕셔너리에서 여러 필드를 묶어 하나의 구조 타입 생성
+```abap
+define structure zs4d430_address {
+  street       : /dmo/street;
+  postal_code  : /dmo/postal_code;
+  city         : /dmo/city;
+  country_code : land1;
+  status       : abap.char(1);
+}
+```
+
+#### 6-2) ABAP 코드에서 Structure 타입 정의
+- ABAP 소스코드에서는 `BEGIN OF` ~ `END OF` 로 구조 정의
+```abap
+TYPES:
+  BEGIN OF st_address,
+    street       TYPE /dmo/street,
+    postal_code  TYPE /dmo/postal_code,
+    city         TYPE /dmo/city,
+    country_code TYPE land1,
+    status       TYPE c LENGTH 1,
+  END OF st_address.
+```
+
+#### 7-1) ABAP Dictionary Nested Structure 타입
+- `Nested` 구조 → 상위-하위-필드 필수, `INCLUDE` 구조 → 바로 접근 가능
+```abap
+define structure zs4d430_person_nested {
+  first_name : /dmo/first_name;
+  last_name  : /dmo/last_name;
+  address    : zs4d430_address;   " 다른 구조 포함
+}
+```
+
+#### 7-2) ABAP 코드에서 Nested Structure 정의
+```abap
+TYPES:
+  BEGIN OF st_person_nested,
+    first_name TYPE /dmo/first_name,
+    last_name  TYPE /dmo/last_name,
+    address    TYPE st_address,   " 구조 안에 구조 포함
+  END OF st_person_nested.
+```
