--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -68,7 +68,7 @@ TYPES:
 ```
 
 #### 7-1) ABAP Dictionary Nested Structure 타입
-- `Nested` 구조 → 상위-하위-필드 필수, `INCLUDE` 구조 → 바로 접근 가능
+- `ls_person-address-city` 처럼 상위-하위-필드로 접근
 ```abap
 define structure zs4d430_person_nested {
   first_name : /dmo/first_name;
@@ -77,7 +77,8 @@ define structure zs4d430_person_nested {
 }
 ```
 
-#### 7-2) ABAP 코드에서 Nested Structure 정의
+#### 7-2) ABAP 코드에서 Nested Structure 정의\
+- `ls_person-address-city` 처럼 구조-구조-필드로 접근
 ```abap
 TYPES:
   BEGIN OF st_person_nested,
@@ -85,4 +86,24 @@ TYPES:
     last_name  TYPE /dmo/last_name,
     address    TYPE st_address,   " 구조 안에 구조 포함
   END OF st_person_nested.
+```
+
+#### 8-1) ABAP Dictionary Flat Structure 타입
+- `ls_person-city` 처럼 바로 필드 접근 가능
+```abap
+define structure zs4d430_person_flat {
+  first_name : /dmo/first_name;
+  last_name  : /dmo/last_name;
+  address    : include zs4d430_address;      " include z03s_name as name; 도 가능
+}
+```
+#### 8-2) ABAP 코드에서 Flat Structure 정의
+- `ls_person-city` 처럼 중간 구조 없이 바로 접근 가능
+```abap
+TYPES:
+  BEGIN OF st_person_flat,
+    first_name TYPE /dmo/first_name,
+    last_name  TYPE /dmo/last_name,
+    INCLUDE TYPE st_address AS address,
+  END OF st_person_flat.
 ```
