--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -1,6 +1,5 @@
-### < 클래스/인터페이스 타입 vs 딕셔너리 타입 정리 >
-- 클래스/인터페이스 타입 : => 로 접근
-- 딕셔너리(Data Element) 타입 : 그냥 이름 그대로 사용
+## < ABAP 타입 정의 위치별 차이와 Nested/Flat 구조 비교 >
+
 </br>
 
 #### 1) Global Class에서 정의한 타입
