--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -126,3 +126,11 @@ TYPES:
 ---
 
 </br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+- nested, flat 구조 실습
+
+<img width="407" height="220" alt="image" src="https://github.com/user-attachments/assets/2ffcb9e2-e7d2-4281-9f0c-861974720bad" />
