Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -132,6 +132,152 @@ TYPES:
 
 ### 실습 1
 - nested, flat 구조 실습
+- 클래스 카피해서 코드 수정
 </br>
 
 <img width="285" height="154" alt="image" src="https://github.com/user-attachments/assets/fe126750-2d78-4629-9b19-9c13a8720060" />
+</br>
+</br>
+
+#### 1) DDIC Structure 생성
+- z03s_address structure
+```abap
+@EndUserText.label : 'address'
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
+define structure z03s_address {
+
+  street      : /dmo/street;
+  postal_code : /dmo/postal_code;
+  city        : /dmo/city;
+  country     : land1;
+
+}
+```
+- z03s_name structure
+```abap
+@EndUserText.label : 'Name'
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
+define structure z03s_name {
+
+  first_name : /dmo/first_name;
+  last_name  : /dmo/last_name;
+
+}
+```
+- z03s_person structure
+```abap
+@EndUserText.label : 'Person'
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
+define structure z03s_person {
+
+  name    : z03s_name;
+  address : z03s_address;
+
+}
+```
+- z03s_person_inc structure
+```abap
+@EndUserText.label : 'PERSON_INC'
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
+define structure z03s_person_inc {
+
+  name    : include z03s_name;
+  address : include z03s_address;
+
+}
+```
+</br>
+
+#### 2) 클래스 코드에 적용
+```abap
+CLASS zc203s_structure DEFINITION
+  PUBLIC
+  FINAL
+  CREATE PUBLIC .
+
+  PUBLIC SECTION.
+    INTERFACES if_oo_adt_classrun .
+
+* Task 1: Simple Structure
+**********************************************************************
+    TYPES:
+      BEGIN OF st_address,
+        street      TYPE /dmo/street,
+        postal_code TYPE /dmo/postal_code,
+        city        TYPE /dmo/city,
+        country     TYPE land1,
+      END OF st_address.
+
+* Task 2: Nested Structure
+**********************************************************************
+    TYPES:
+      BEGIN OF st_name,
+        first_name TYPE /dmo/first_name,
+        last_name  TYPE /dmo/last_name,
+      END OF st_name.
+
+    TYPES: BEGIN OF st_person,
+             name    TYPE st_name,
+             address TYPE st_address,
+           END OF st_person.
+
+
+*Task 3: Named Includes
+**********************************************************************
+    TYPES BEGIN OF st_person_inc.
+    INCLUDE TYPE st_name    AS name.
+    INCLUDE TYPE st_address AS address.
+    TYPES END OF st_person_inc.
+
+protected section.
+private section.
+ENDCLASS.
+
+
+
+CLASS ZC203S_STRUCTURE IMPLEMENTATION.
+
+
+  METHOD if_oo_adt_classrun~main.
+
+* Task 1
+**********************************************************************
+    DATA address TYPE z03s_address.
+
+    address-street      = 'Dietmar-Hopp-Allee 16'.
+    address-postal_code = '69190'.
+    address-city        = 'Walldorf'.
+    address-country     = 'DE'.
+
+* Task 2
+**********************************************************************
+    DATA person TYPE z03s_person.
+
+    person-name-first_name     = 'Dictionary'.
+    person-name-last_name      = 'ABAP'.
+    person-address-street      = 'Dietmar-Hopp-Allee 16'.
+    person-address-postal_code = '69190'.
+    person-address-city        = 'Walldorf'.
+    person-address-country     = 'DE'.
+
+* Task 2
+**********************************************************************
+    DATA person2 TYPE z03s_person_inc.
+
+    person2-name-first_name     = 'Dictionary'.
+    person2-name-last_name      = 'ABAP'.
+    person2-address-street      = 'Dietmar-Hopp-Allee 16'.
+    person2-address-postal_code = '69190'.
+    person2-address-city        = 'Walldorf'.
+    person2-address-country     = 'DE'.
+* or -------------------------------------------------------
+    person2-first_name  = 'Dictionary'.
+    person2-last_name   = 'ABAP'.
+    person2-street      = 'Dietmar-Hopp-Allee 16'.
+    person2-postal_code = '69190'.
+    person2-city        = 'Walldorf'.
+    person2-country     = 'DE'.
+
+  ENDMETHOD.
+ENDCLASS.
+```
