Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -89,7 +89,7 @@ define structure zs4d430_person_nested {
 }
 ```
 
-#### 7-2) ABAP 코드에서 Nested Structure 정의\
+#### 7-2) ABAP 코드에서 Nested Structure 정의
 - `ls_person-address-city` 처럼 구조-구조-필드로 접근
 ```abap
 TYPES:
@@ -118,6 +118,27 @@ TYPES:
     last_name  TYPE /dmo/last_name,
     INCLUDE TYPE st_address AS address,
   END OF st_person_flat.
+```
+
+#### 9-1) ABAP Dictionary Deep Structure 타입 (Table-like Component)
+- `ls_person-addresses[ 1 ]-city` 처럼 테이블 인덱스 거쳐 접근
+```abap
+define structure zs4d430_person_deep {
+  first_name : /dmo/first_name;
+  last_name  : /dmo/last_name;
+  addresses  : zs4d430_t_addresses;   " Table Type
+}
+```
+
+#### 9-2) ABAP 코드에서 Deep Structure 정의
+- `ls_person-addresses[ 1 ]-city` 처럼 내부테이블[ ]-필드 접근
+```abap
+TYPES:
+  BEGIN OF st_person_deep,
+    first_name TYPE /dmo/first_name,
+    last_name  TYPE /dmo/last_name,
+    addresses  TYPE st_addresses,   " 내부 테이블 타입
+  END OF st_person_deep.
 ```
 </br>
 </br>
