--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -143,7 +143,12 @@ TYPES:
 </br>
 </br>
 
-## < 
+## < Eclipse에서 Type 생성 절차 >
+</br>
+
+#### 1) ABAP Dictionary Table Type 생성
+
+<img width="509" height="279" alt="image" src="https://github.com/user-attachments/assets/0da4c6fd-720e-43ef-b33b-2e863c2e49a2" />
 
 </br>
 </br>
