Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -149,6 +149,30 @@ TYPES:
 #### 1) ABAP Dictionary Table Type 생성
 
 <img width="509" height="279" alt="image" src="https://github.com/user-attachments/assets/0da4c6fd-720e-43ef-b33b-2e863c2e49a2" />
+</br>
+</br>
+
+#### 2) Table Type 이름 및 패키지 설정
+
+<img width="509" height="284" alt="image" src="https://github.com/user-attachments/assets/b92aa9bd-9ddc-4bfe-a16c-48f8bf3d4eeb" />
+</br>
+</br>
+
+<img width="509" height="293" alt="image" src="https://github.com/user-attachments/assets/d40527cb-ba36-4e21-8026-fa3c7b4b7734" />
+</br>
+</br>
+
+<img width="502" height="292" alt="image" src="https://github.com/user-attachments/assets/b2e9e88e-f47d-4d7a-8af2-c08d922e6f89" />
+</br>
+</br>
+
+#### 3) Table Type 세부 설정 (Row Type, Access, Key 설정 화면)
+
+<img width="511" height="371" alt="image" src="https://github.com/user-attachments/assets/d0b2cd77-8af5-4e5c-95bf-4de31939803d" />
+</br>
+</br>
+
+<img width="505" height="349" alt="image" src="https://github.com/user-attachments/assets/c1f9623f-059e-4d31-bc4c-a90544c9920a" />
 
 </br>
 </br>
