Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -339,3 +339,32 @@ CLASS ZC203S_STRUCTURE IMPLEMENTATION.
   ENDMETHOD.
 ENDCLASS.
 ```
+</br>
+</br>
+</br>
+
+### 실습 2
+- 테이블 타입 생성 실습
+</br>
+
+#### 1) DDIC 타입으로 지정할 요소들 생성
+- Table Type 생성
+
+<img width="690" height="319" alt="image" src="https://github.com/user-attachments/assets/fb45fbe2-028a-4068-9175-c93054303465" />
+</br>
+
+<img width="670" height="310" alt="image" src="https://github.com/user-attachments/assets/3bd095e4-e67b-45fe-8bc7-b18b9ea61c3c" />
+</br>
+
+- `Z03S_PERSON_DEEP` Structure 생성
+```abap
+@EndUserText.label : 'Z03S_PERSON_DEEP'
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
+define structure z03s_person_deep {
+
+  first_name : /dmo/first_name;
+  last_name  : /dmo/last_name;
+  addresses  : z03t_address;
+
+}
+```
