--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -368,3 +368,86 @@ define structure z03s_person_deep {
 
 }
 ```
+</br>
+
+#### 2) 클래스 코드에 적용
+- 신문법 `VALUE #( )` 를 사용하면 `APPEND` 없이 내부 테이블 데이터를 한 번에 생성할 수 있음
+```abap
+DATA <itab> TYPE <table_type>.
+
+<itab> = VALUE <table_type>(
+  ( <field1> = <value1>
+    <field2> = <value2>
+    <sub_table> = VALUE <sub_table_type>(
+                     ( <sub_field1> = <value> )
+                     ( <sub_field1> = <value> )
+                   )
+  )
+).
+```
+```abap
+CLASS ZCL_03_TABLE_TYPE IMPLEMENTATION.
+
+
+  METHOD if_oo_adt_classrun~main.
+
+* Task 1
+**********************************************************************
+    DATA addresses TYPE Z03T_ADDRESS.
+
+    addresses =
+      VALUE #(
+              ( street      = 'Dietmar-Hopp-Allee 16'
+                postal_code = '69190'
+                city        = 'Walldorf'
+                country     = 'DE'
+              )
+              ( street      = '3999 West Chester Pike'
+                postal_code = '19073'
+                city        = 'Newtown Square, PA'
+                country     = 'US'
+              )
+             ).
+
+* Task 2
+**********************************************************************
+    DATA person TYPE z03s_person_deep.
+
+    person-first_name = 'Dictionary'.
+    person-last_name  = 'ABAP'.
+    person-addresses  = addresses.
+
+* Task 3
+**********************************************************************
+    DATA persons TYPE Z03T_PERSONS.
+
+    persons =
+       VALUE #(
+          ( person )
+          (
+            first_name = 'CDS'
+            last_name  = 'ABAP'
+            addresses =
+              VALUE #(
+                      ( street      = 'SAP-Allee 29'
+                        postal_code = '68789'
+                        city        = 'St.Leon-Rot'
+                        country     = 'DE'
+                      )
+                      ( street      = '35 rue d''Alsace'
+                        postal_code = '92300'
+                        city        = 'Levallois-Perret'
+                        country     = 'FR'
+                      )
+                      ( street      = 'Bedfont Road'
+                        postal_code = 'TW14 8HD'
+                        city        = 'Feltham'
+                        country     = 'GB'
+                      )
+                     )
+           )
+         ).
+
+  ENDMETHOD.
+ENDCLASS.
+```
