Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -185,6 +185,27 @@ TYPES:
 
 </br>
 
+## < CDS View Entity 정의 구조 >
+- 테이블에 저장된 데이터를 조회(읽기)하기 위한 가상 뷰 구조
+```abap
+define view entity <CDS_엔티티이름>
+  as select from <데이터소스(테이블/다른CDS)>
+{
+    <필드1>,
+    <필드2>,
+    <필드3>
+}
+```
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP 타입 정의 위치별 차이와 Nested/Flat 구조 비교 >
+
 ## < 실습 코드 >
 </br>
 
