Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -142,6 +142,11 @@ TYPES:
 ```
 </br>
 </br>
+</br>
+
+---
+
+</br>
 
 ## < Eclipse에서 Type 생성 절차 >
 </br>
@@ -173,19 +178,15 @@ TYPES:
 </br>
 
 <img width="505" height="349" alt="image" src="https://github.com/user-attachments/assets/c1f9623f-059e-4d31-bc4c-a90544c9920a" />
-
 </br>
 </br>
 </br>
 </br>
 </br>
 </br>
-
----
-
 </br>
 
-## < CDS View Entity 정의 구조 >
+## < Eclipse에서 CDS View Entity 생성 절차 >
 - 테이블에 저장된 데이터를 조회(읽기)하기 위한 가상 뷰 구조
 ```abap
 define view entity <CDS_엔티티이름>
@@ -196,11 +197,22 @@ define view entity <CDS_엔티티이름>
     <필드3>
 }
 ```
+</br>
 
+#### 1) Core Data Services → Data Definition을 선택해 CDS View(Entity)를 생성
+
+<img width="551" height="461" alt="image" src="https://github.com/user-attachments/assets/6471e9ef-a25d-4e31-94d1-d5bef65d7070" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
 </br>
 </br>
 
 ---
+
 
 </br>
 
