Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -199,9 +199,16 @@ define view entity <CDS_엔티티이름>
 ```
 </br>
 
-#### 1) Core Data Services → Data Definition을 선택해 CDS View(Entity)를 생성
+#### 1) CDS View(Entity)를 생성
 
-<img width="551" height="461" alt="image" src="https://github.com/user-attachments/assets/6471e9ef-a25d-4e31-94d1-d5bef65d7070" />
+<img width="493" height="412" alt="image" src="https://github.com/user-attachments/assets/54dcfcdf-e410-4567-9d91-edddb2128694" />
+</br>
+</br>
+
+#### 2)
+
+<img width="601" height="371" alt="image" src="https://github.com/user-attachments/assets/6d01d728-d947-4c17-a3e1-53d042e5e7fe" />
+
 
 </br>
 </br>
