Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -205,11 +205,31 @@ define view entity <CDS_엔티티이름>
 </br>
 </br>
 
-#### 2)
+#### 2) 구문법 defineView(AS ABAP 7.57부터 obsolete)를 선택
 
-<img width="524" height="323" alt="image" src="https://github.com/user-attachments/assets/43942bff-21f3-4679-b578-93a26009963c" />
+<img width="524" height="323" alt="image" src="https://github.com/user-attachments/assets/03ca9f3b-fe73-401a-b122-775e8618ec72" />
+</br>
 
+<img width="522" height="415" alt="image" src="https://github.com/user-attachments/assets/35238a04-6caa-4cc5-96cf-e8835e4ec5a5" />
+</br>
+</br>
 
+#### 3) 구문법 define view를 사용해 SCARR 테이블을 기반으로 SQL View(ZCDSSCARR_B03_S)를 생성
+```abap
+@AbapCatalog.sqlViewName: 'ZCDSSCARR_B03_S'
+@AbapCatalog.compiler.compareFilter: true
+@AbapCatalog.preserveKey: true
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Scarr SCDS View'
+@Metadata.ignorePropagatedAnnotations: true
+define view ZCDSSCARR_B03 as select from scarr
+{
+    key carrid as Carr_Id,
+    carrname as Carr_Name,
+    currcode,
+    url 
+}
+```
 
 </br>
 </br>
