Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -1,4 +1,4 @@
-## <  핵심 개념 >
+<img width="522" height="398" alt="image" src="https://github.com/user-attachments/assets/f60741ce-2e09-4bc9-8f1c-b5772648f44f" />## <  핵심 개념 >
 - **1) ABAP Dictionary 및 CDS 객체 구조**
 - **2) SAP UI5 테마 커스터마이징 (TCODE - FIORI LAUNCHPAD : `/n/ui2/flp`), TCODE - 테마 : `/n/ui5/theme_designer`)**
 - **3) Eclipse에서 ABAP 패키지 생성 절차**
@@ -228,6 +228,35 @@ define view ZCDSSCARR_B03 as select from scarr
     carrname as Carr_Name,
     currcode,
     url 
+}
+```
+</br>
+
+#### 4) 신문법 defineViewEntity 템플릿을 선택하여 CDS View Entity 생성
+
+<img width="524" height="333" alt="image" src="https://github.com/user-attachments/assets/4e5ff12e-4296-4b55-a88a-1c4ab4a2db70" />
+</br>
+
+<img width="522" height="398" alt="image" src="https://github.com/user-attachments/assets/bc023980-cd5c-4033-81f5-8e9afe6a0a32" />
+</br>
+</br>
+
+#### 5) 신문법 define view entity를 사용해 SCARR 테이블을 기반으로 CDS View Entity(ZCDSSCARR2_B03)를 생성
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Scarr CDS View 2'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSSCARR2_B03
+  as select from scarr
+{
+  key carrid   as Carrid,   // 주석은 이렇게
+      carrname as Carrname  // 주석 !!
+      /*
+        다중 주석 처리
+        Ctrl + Shift + < : 주석 적용
+        Ctrl + Shift + > : 주석 해제
+      */
 }
 ```
 
