Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -541,3 +541,30 @@ CLASS ZCL_03_TABLE_TYPE IMPLEMENTATION.
   ENDMETHOD.
 ENDCLASS.
 ```
+</br>
+</br>
+</br>
+
+### 실습 3
+- CDS View 생성 실습
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Z03_R_Employee'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity Z03_R_Employee as select from z03employ
+{
+    key employee_id as EmployeeId,
+    first_name as FirstName,
+    last_name as LastName,
+    birth_date as BirthDate,
+    entry_date as EntryDate,
+    // annual_salary as AnnualSalary,
+    // currency_code as CurrencyCode,
+    created_by as CreatedBy,
+    created_at as CreatedAt,
+    local_last_changed_by as LocalLastChangedBy,
+    local_last_changed_at as LocalLastChangedAt,
+    last_changed_at as LastChangedAt
+}
+```
