Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -259,6 +259,47 @@ define view entity ZCDSSCARR2_B03
       */
 }
 ```
+</br>
+</br>
+</br>
+</br>
+
+## < CDS View Entity 어노테이션 설정 >
+</br>
+
+#### 1) 구문법 CDS View(DDIC 기반) 어노테이션 설정 구조
+- 구문법 define view에서는 SQL View 생성을 위해 @AbapCatalog.sqlViewName을 반드시 설정해야 함
+```abap
+@AbapCatalog.sqlViewName: 'S4D430_ANNO1'        // 생성될 DDIC SQL View 이름 지정
+@ClientHandling.type: #INHERITED               // 클라이언트 처리 방식 상속
+@ClientHandling.algorithm: #AUTOMATED          // Open SQL에서 클라이언트 자동 처리
+@AbapCatalog.compiler.compareFilter: true      // 필터 비교 최적화
+@AbapCatalog.Buffering.type: #GENERIC          // 버퍼링 유형 설정
+@AbapCatalog.Buffering.numberOfKeyFields: 2    // 제네릭 버퍼 키 필드 개수
+@AbapCatalog.Buffering.status: #ACTIVE         // SQL View 버퍼링 활성화
+
+define view S4D430_Annotations1                // 구문법 CDS View 정의
+  as select from <테이블>
+{
+    key <필드1>,
+        <필드2>
+}
+```
+
+</br>
+
+#### 2) 신문법 CDS View Entity 어노테이션 설정 구조
+```abap
+@AbapCatalog.dataMaintenance: #RESTRICTED          // CDS 데이터 프리뷰 제한 설정
+@AbapCatalog.viewEnhancementCategory: [#NONE]     // CDS 확장(Extension) 허용 안 함
+@AccessControl.authorizationCheck: #NOT_REQUIRED  // Open SQL 권한 체크 수행 안 함
+@ObjectModel.usageType.serviceQuality: #X         // 서비스 품질 특성 지정
+@ObjectModel.usageType.sizeCategory: #S           // 데이터 규모(사이즈) 분류
+@ObjectModel.usageType.dataClass: #MIXED          // 데이터 성격(트랜잭션/마스터 혼합)
+@AbapCatalog.entityBuffer.definitionAllowed: false // CDS View Entity 버퍼링 허용 안 함
+
+define view entity ZS4D430_R_Employee              // CDS View Entity 정의 시작
+```
 
 </br>
 </br>
