Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -300,7 +300,20 @@ define view S4D430_Annotations1                // 구문법 CDS View 정의
 
 define view entity ZS4D430_R_Employee              // CDS View Entity 정의 시작
 ```
+</br>
 
+#### 3) CDS 금액·수량 Semantics 어노테이션 설정
+```abap
+@Semantics.amount.currencyCode: 'Currency'   // Price 필드의 통화코드는 Currency 별칭 필드에 있음
+price      as Price,                        // 금액 필드
+@Semantics.currencyCode: true               // 이 필드는 통화코드(CUKY) 필드임을 표시
+currency   as Currency,                     // 통화코드 필드 (별칭 사용)
+
+@Semantics.quantity.unitOfMeasure: 'DistanceID'  // Distance 필드의 단위는 DistanceID 별칭 필드에 있음
+distance   as Distance,                          // 수량 필드
+@Semantics.unitOfMeasure: true                   // 이 필드는 단위(Unit) 필드임을 표시
+distid     as DistanceID                         // 단위 필드 (별칭 사용)
+```
 </br>
 </br>
 </br>
