Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -315,7 +315,44 @@ distance   as Distance,                          // 수량 필드
 distid     as DistanceID                         // 단위 필드 (별칭 사용)
 ```
 </br>
+
+#### 4) CDS 어노테이션 개별 작성 vs 그룹 작성 구조
+- 개별 작성 방식
+```abap
+@ObjectModel.usageType.serviceQuality: #X   // 서비스 품질 특성
+@ObjectModel.usageType.sizeCategory:   #S   // 데이터 규모 분류
+@ObjectModel.usageType.dataClass:      #MIXED // 데이터 성격(마스터/트랜잭션 혼합)
+```
+- 그룹(Sub-Annotation) 작성 방식
+```abap
+@ObjectModel: {                          // ObjectModel 어노테이션 그룹 시작
+  usageType: {                           // usageType 하위 그룹
+    serviceQuality: #X,                  // 서비스 품질
+    sizeCategory:   #S,                  // 데이터 규모
+    dataClass:      #MIXED               // 데이터 성격
+  }
+}
+```
 </br>
+
+#### 5) CDS 번역 가능 텍스트(Translatable Text) 어노테이션
+- 화면에 표시되는 텍스트를 정의하는 어노테이션
+- View 레벨 텍스트
+```abap
+@EndUserText.label: 'Employee'   // CDS View 제목 (최대 60자)
+
+define view entity ZI_Employee
+  as select from <table>
+{
+    ...
+}
+```
+- Element(필드) 레벨 텍스트
+```abap
+@EndUserText.label: 'Date of Birth'                  // 필드 표시명 (최대 60자)
+@EndUserText.quickInfo: 'Date of birth of this employee'  // 필드 툴팁 설명 (가변 길이)
+birth_date as BirthDate,
+```
 </br>
 </br>
 </br>
